--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -1,4 +1,4 @@
-@use "variables" as *;
+@use "@/shared/styles/variables" as *;
 
 @function vh($value) {
     @return calc(#{$vh-base} * #{$value});
