--- a/src/shared/styles/reset.scss
+++ b/src/shared/styles/reset.scss
@@ -1,5 +1,5 @@
-@use "variables" as *;
-@use "mixins" as *;
+@use "@/shared/styles/variables" as *;
+@use "@/shared/styles/mixins" as *;
 
 * {
     margin: 0;
